# pipefy-integration-service

./: .gitignore  .pre-commit-config.yaml  CHANGELOG  Dockerfile  LICENSE  README.md  docker-compose.yml  env.example  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: main.py
app/api/: deps.py  error_handlers.py
app/api/v1/: clientes.py  system.py  webhooks.py
app/core/: settings.py
app/db/: session.py
app/domain/: exceptions.py  priority.py
app/integrations/pipefy/: client.py  mutations.py
app/models/: cliente.py  processed_event.py
app/schemas/: cliente.py  webhook.py
app/services/: cliente_service.py  webhook_service.py
app/tests/: conftest.py  test_clientes.py  test_contracts.py  test_db.py  test_main.py  test_pipefy_client.py  test_priority.py  test_webhook_service.py  test_webhooks.py
